--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "expo lint"
+    "lint": "bunx @biomejs/biome lint --apply .",
+    "format": "bunx @biomejs/biome format --write ."
   },
   "jest": {
     "preset": "jest-expo"
@@ -21,6 +22,7 @@
     "expo-constants": "~16.0.1",
     "expo-font": "~12.0.5",
     "expo-linking": "~6.3.1",
+    "expo-localization": "~15.0.3",
     "expo-router": "~3.5.14",
     "expo-splash-screen": "~0.27.4",
     "expo-status-bar": "~1.12.1",
@@ -30,20 +32,21 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
     "react-native-gesture-handler": "~2.16.1",
-    "react-native-reanimated": "~3.11.0",
+    "react-native-reanimated": "~3.10.",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@biomejs/biome": "1.7.3",
     "@types/jest": "^29.5.12",
-    "@types/react": "~18.3.2",
+    "@types/react": "~18.2.79",
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.2",
     "react-test-renderer": "18.2.0",
-    "typescript": "~5.4.5"
+    "typescript": "~5.3.3"
   },
   "private": true
 }
