--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "start": "expo start",
     "dev": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "prebuild": "expo prebuild --skip-dependency-update react-native,react --clean",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "bunx @biomejs/biome lint --apply .",
@@ -38,6 +39,7 @@
     "react-native-reanimated": "~3.10.",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-vision-camera": "^4.1.0",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
