--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
     "react-native-gesture-handler": "~2.16.1",
-    "react-native-reanimated": "~3.10.",
+    "react-native-reanimated": "^3.12.0",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-vision-camera": "^4.1.0",
