--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/native": "^6.0.2",
     "@shopify/react-native-skia": "1.2.3",
-    "expo": "^51.0.0",
+    "expo": "~51.0.14",
+    "expo-build-properties": "~0.12.3",
     "expo-constants": "~16.0.1",
     "expo-font": "~12.0.5",
     "expo-linear-gradient": "~13.0.2",
@@ -39,6 +40,7 @@
     "react-native-reanimated": "3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-vision-camera": "^4.3.2",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
@@ -52,5 +54,8 @@
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
-  "private": true
+  "private": true,
+  "trustedDependencies": [
+    "@biomejs/biome"
+  ]
 }
